--- a/sort-viz/package.json
+++ b/sort-viz/package.json
@@ -9,7 +9,9 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.1",
     "react-scripts": "3.4.3",
+    "redux": "^4.0.5",
     "sass": "^1.26.10"
   },
   "scripts": {
